# commanders-in-chief

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CURRENT.md  Cargo.toml  NOTICE.md  README.md  ROADMAP.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cic-core/: Cargo.toml  README.md
crates/cic-core/src/: binary.rs  lib.rs
crates/cic-formats/: Cargo.toml  README.md
crates/cic-formats/src/: csf.rs  lib.rs  map.rs  map_blend.rs  map_lighting.rs  map_scenario.rs  map_water.rs  object_ini.rs  options_ini.rs  refpack.rs  road_ini.rs  terrain_ini.rs  w3d.rs  w3d_material.rs  w3d_mesh.rs  w3d_scene.rs  water_ini.rs  wnd.rs
crates/cic-formats/tests/fixtures/: blend.map.hex  colored-mesh.w3d.hex  minimal.csf.hex  minimal.map.hex  minimal.w3d.hex  static-mesh.w3d.hex
crates/cic-render/: Cargo.toml
crates/cic-render/examples/: headless_capture.rs
crates/cic-render/src/: boundary.rs  boundary_viewer.wgsl  lib.rs  lighting.rs  map_overlay.rs  map_scene.rs  model.rs  model.wgsl  resource.rs  road.rs  road_viewer.wgsl  scene_shadow.wgsl  scenery.rs  shader.wgsl  static_scenery.wgsl  terrain.rs  terrain.wgsl  terrain_deferred.wgsl  terrain_shadow.wgsl  terrain_viewer.rs  terrain_viewer.wgsl  terrain_virtual.rs  terrain_virtual.wgsl  viewer.rs  viewer.wgsl  water.rs  water_viewer.wgsl  wnd_scene.rs
crates/cic-render/tests/: headless_capture.rs  terrain_capture.rs  water_shader.rs
crates/cic-render/tests/fixtures/: synthetic-pose.rgba.sha256
crates/cic-tools/: Cargo.toml  README.md
crates/cic-tools/src/: gltf.rs  lib.rs  main.rs  resource.rs
crates/cic-tools/tests/: manifest_cli.rs
crates/cic-tools/tests/fixtures/: checker.tga.hex  textured-animated.rgba.sha256
crates/cic-vfs/: Cargo.toml  README.md
crates/cic-vfs/src/: big.rs  lib.rs
crates/cic-vfs/tests/fixtures/: minimal.big.hex  minimal.big4.hex
docs/adr/: 0001-license-and-provenance.md  0002-first-pass-wavefront-material-preview.md  0003-gltf-resource-profiles-and-model-composition.md  0004-renderer-boundary-and-wgpu-backend.md  0005-map-inventory-and-height-boundary.md  0006-terrain-staging-and-texture-policy.md  0007-hybrid-deferred-water-and-modern-detiling.md  0008-lazy-vfs-and-mod-mount-profiles.md  0009-complete-map-scene-and-script-data-boundary.md  0010-wnd-ui-model-and-wgpu-renderer.md
docs/ai/: README.md
docs/formats/: README.md  big.md  csf.md  map.md  w3d.md  wnd.md
docs/invariants/: binary-parsing.md  determinism.md
docs/milestones/: r0-foundation.md  r1-big-csf.md  r2-w3d-viewer.md  r3-map-scene.md  r4-wnd-shell.md  r5-simulation.md  r6-gameplay-slice.md
docs/provenance/: big.md  csf.md  map.md  options.md  w3d.md  wnd.md
docs/testing/: source-derived-map-scene.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: big.rs  csf.rs  map.rs  water_ini.rs
