[workspace]
resolver = "2"
members = [
    "crates/cic-core",
    "crates/cic-formats",
    "crates/cic-vfs",
    "crates/cic-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
