[package]
name = "cic-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "GPL-3.0-only"

[package.metadata]
cargo-fuzz = true

[dependencies]
cic-formats = { path = "../crates/cic-formats" }
cic-vfs = { path = "../crates/cic-vfs" }
libfuzzer-sys = "0.4"

[[bin]]
name = "big"
path = "fuzz_targets/big.rs"
test = false
doc = false
bench = false

[[bin]]
name = "csf"
path = "fuzz_targets/csf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "map"
path = "fuzz_targets/map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "water_ini"
path = "fuzz_targets/water_ini.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
