[package]
name = "cic-render"
description = "Deterministic renderer boundary for Commanders in Chief"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cic-formats = { path = "../cic-formats" }
pollster = "0.4"
sha2 = "0.10"
wgpu = { version = "30", default-features = false, features = ["std", "dx12", "metal", "vulkan", "wgsl"] }
winit = "0.30.13"

[dev-dependencies]
naga = { version = "30", features = ["wgsl-in"] }

[lints]
workspace = true
