[package]
name = "cic-tools"
description = "Diagnostic command-line tools for Commanders in Chief"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cic-formats = { path = "../cic-formats" }
cic-vfs = { path = "../cic-vfs" }
image = { version = "0.25", default-features = false, features = ["dds", "png", "tga"] }
png = "0.18"
serde_json = "1"

[lints]
workspace = true

[[bin]]
name = "cic-inspect"
path = "src/main.rs"
